@@ -9,8 +9,12 @@
 -When pasting into the "Add cards" or "Edit cards" dialog, respect the
  formatting of the card field.
 -Changing card types and deleting cards from the card browser is now faster.
+-No longer convert filenames to lower case on Windows (requested by Michael
+ Campbell).
+-Fix another crash involving duplicates while converting cards (reported by
+ Gnome).
 -Fix harmless error message when converting to Cloze cards in the card browser
- (reported my Michael Campbell).
+ (reported by Michael Campbell).
 -Upgraded to lastest version of Qt/PyQt.
 
 
